# mnist-polyspectra

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: analysis.ipynb  analysis.py
src/: __init__.py  config.py  correlators.py  polyspectra.py  sampling.py  visualization.py
