[project]
name = "mnist-polyspectra"
version = "0.1.0"
description = "N-point connected correlators and polyspectra analysis on MNIST"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "PyWavelets>=1.4",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "plotly>=5.14",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
